<resources>
    <string name="app_name">Tunisia Up</string>
    <string name="sign_in">Google Sign in</string>
    <string name="sign_out">Google Sign out</string>

    <string name="user_id">ID</string>
    <string name="user_display_name">Display Name</string>
    <string name="user_full_name">Full Name</string>
    <string name="user_email">Email</string>
    <string name="message_picasso_success">onSuccess</string>
    <string name="message_picasso_error">An error occurred</string>
    <string name="message_google_signout">Google Sign Out done.</string>
    <string name="message_google_signin">Google Sign In Successful.</string>
    <string name="message_google_revoke">Google access revoked.</string>
    <string name="go">Visit The Application</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tunisia Up</string>
    <string name="nav_header_subtitle">Bellisomo Tunisia</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_home">Definition</string>
    <string name="menu_gallery">North</string>
    <string name="menu_slideshow">Cap Bon</string>
    <string name="menu_tools">South</string>
    <string name="menu_share">Call</string>
    <string name="menu_send">Send</string>
    <string name="def">La Tunisie  en forme longue la République tunisienne est un État d"Afrique du Nord bordé au nord et à l'est par la mer Méditerranée (1 148 kilomètres de côtes), à l'ouest par l'Algérie avec 965 kilomètres de frontière commune et au sud-sud-est par la Libye avec 459 kilomètres de frontière. Sa capitale Tunis est située dans le nord-est du pays, au fond du golfe du même nom. Plus de 30 % de la superficie du territoire est occupée par le désert du Sahara, le reste étant constitué de régions montagneuses et de plaines fertiles </string>
    <string name="SendUsEmail">Contact Us</string>

</resources>
